--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 /Design Patterns Lab/nbproject/private/
 /Design Patterns Lab/build/
+/Introduction to data science/nbproject/private/
+/Introduction to data science/build/
